--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<h1>Teste</h1>
+<h1>Olá</h1>
+<app-first-component></app-first-component>
+<app-parent-data [name]="userName" [userData]="userData"></app-parent-data>
+<app-directives></app-directives>
