--- a/src/app/components/parent-data/parent-data.component.html
+++ b/src/app/components/parent-data/parent-data.component.html
@@ -1,3 +1,5 @@
-<h1>Meu nome é: {{name}} </h1>
-<h2>Meu email é: {{ userData.email }} </h2>
-<h3>Meu trabalho é: {{ userData.role }} </h3>
+<div class="class">
+    <h1>Meu nome é: {{name}} </h1>
+    <h2>Meu email é: {{ userData.email }} </h2>
+    <h3>Meu trabalho é: {{ userData.role }} </h3>
+</div>
