--- a/src/app/components/directives/directives.component.html
+++ b/src/app/components/directives/directives.component.html
@@ -1,3 +1,5 @@
-<h2 [ngStyle]="{'font-size': size +'px', 'font-family': font, 'color': color}">Testando diretiva de estilo</h2>
+<div class="class"> 
+    <h2 [ngStyle]="{'font-size': size +'px', 'font-family': font, 'color': color}">Testando diretiva de estilo</h2>
 
-<h2 [ngClass]="classes">Testando diretica de classes 1</h2>
+    <h2 [ngClass]="classes">Testando diretica de classes 1</h2>
+</div>
