--- a/src/app/components/first-component/first-component.component.html
+++ b/src/app/components/first-component/first-component.component.html
@@ -1,3 +1,5 @@
-<h2>Nome: {{ name }} </h2>
-<p>Idade: {{ age }}</p>
-<p>GIovani chatocu</p>
+<div class="class">
+    <h2>Nome: {{ name }} </h2>
+    <p>Idade: {{ age }}</p>
+    <p>GIovani chatocu</p>
+</div>
